--- a/error404.html.html
+++ b/error404.html.html
@@ -30,7 +30,7 @@
 				<li><a href="index.html">Doméstico</a></li>
 				<li><a href="html/productos.html">Productos</a></li>
 				<li><a href="html/servicios.html">Servicios</a></li>
-				<li><a href="html/sucursales.html">Sucursales</a></li>
+				<li><a href="html/franquicias.html">franquicias</a></li>
 				<li><a href="#contacto-form">Contacto</a></li>
 			</ul>
 		</nav>
