--- a/html/franquicias.html
+++ b/html/franquicias.html
@@ -31,18 +31,18 @@
 				<li><a href="../index.html">Doméstico</a></li>
 				<li><a href="productos.html">Productos</a></li>
 				<li><a href="servicios.html">Servicios</a></li>
-				<li><a href="sucursales.html" class="current">Sucursales</a></li>
+				<li><a href="franquicias.html" class="current">Franquicias</a></li>
 				<li><a href="#contacto-form">Contacto</a></li>
 			</ul>
 		</nav>
-		<a class="linkCompra" href="#" target="">compra y vende doméstico</a>
+		<a class="linkCompra" href="#contacto-form" target="">comprá y vendé doméstico</a>
 	</header>
 
 	<main class="contenedor">
-		<div class="content--sucursales">
+		<div class="content--franquicias">
 
 
-			<div class="sucursales__titulo">
+			<div class="franquicias__titulo">
 				<svg class="pulse" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
 					xmlns:xlink="http://www.w3.org/1999/xlink">
 					<circle id="Oval" cx="512" cy="512" r="512"></circle>
@@ -55,7 +55,7 @@
 					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
 					allowfullscreen></iframe>
 			</div>
-			<div class="box--sucursales">
+			<div class="box--franquicias">
 				<div class="caja">
 					<i class="fas fa-award"></i>
 					<h4>CAPACITACIONES</h4>
@@ -176,13 +176,6 @@
 					<i class="far fa-envelope"></i>
 					<h4>Mail</h4>
 					<p>Info@domestico.com.ar</p>
-				</div>
-				<div class="box__mapa">
-					<i class="fas fa-thumbtack"></i>
-					<h4>Dirección</h4>
-					<p>Av. Victorica 280
-						Moreno . Prov. de Buenos Aires
-						Argentina . CP 1744</p>
 				</div>
 				<div class="box__mapa">
 					<i class="far fa-clock"></i>
