--- a/html/productos.html
+++ b/html/productos.html
@@ -34,11 +34,11 @@
 				<li><a href="../index.html">Doméstico</a></li>
 				<li><a href="productos.html" class="current">Productos</a></li>
 				<li><a href="servicios.html">Servicios</a></li>
-				<li><a href="sucursales.html">Sucursales</a></li>
+				<li><a href="franquicias.html">Franquicias</a></li>
 				<li><a href="#contacto-form">Contacto</a></li>
 			</ul>
 		</nav>
-		<a class="linkCompra" href="#" target="">compra y vende doméstico</a>
+		<a class="linkCompra" href="#contacto-form" target="">comprá y vendé doméstico</a>
 	</header>
 
 	<main class="contenedor">
@@ -235,13 +235,6 @@
 					<i class="far fa-envelope"></i>
 					<h4>Mail</h4>
 					<p>Info@domestico.com.ar</p>
-				</div>
-				<div class="box__mapa">
-					<i class="fas fa-thumbtack"></i>
-					<h4>Dirección</h4>
-					<p>Av. Victorica 280
-						Moreno . Prov. de Buenos Aires
-						Argentina . CP 1744</p>
 				</div>
 				<div class="box__mapa">
 					<i class="far fa-clock"></i>
