--- a/index.html
+++ b/index.html
@@ -32,17 +32,21 @@
 				<li><a href="index.html" class="current">Doméstico</a></li>
 				<li><a href="html/productos.html">Productos</a></li>
 				<li><a href="html/servicios.html">Servicios</a></li>
-				<li><a href="html/sucursales.html">Sucursales</a></li>
+				<li><a href="html/franquicias.html">Franquicias</a></li>
 				<li><a href="#contacto-form">Contacto</a></li>
 			</ul>
 		</nav>
-		<a class="linkCompra" href="#" target="">compra y vende doméstico</a>
+		<a class="linkCompra" href="#" target="">comprá y vendé doméstico</a>
 	</header>
 
 	<main class="contenedor">
 		<section class="carrusel">
 			<div class="carrusel__contenedor">
 				<div class="slides fades">
+					<div class="name">
+						<div class="text">PREPARATE PARA EL VERANO! <h4>Y Equipate con todo lo que necesitas.</h4>
+						</div>
+					</div>
 					<img src="img/slide/2.jpg" style="width:100%">
 				</div>
 				<div class="slides fades">
